--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "country-flag-icons": "^1.4.22",
     "vue": "^2.6.14"
   },
   "devDependencies": {
